--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Android1</string>
+    <string name="prompt_select_book">Оберіть книгу</string>
 </resources>
